# autohypothesis

./: .gitignore  A100_HANDOFF.md  README.md  SKILL.md  comparison_chart.py  orchestrator.py  program.md  pyproject.toml  schema.py  scientific_process.py  train.py
dashboard/: __init__.py  run.sh  server.py
dashboard/frontend/: package-lock.json  package.json  vite.config.ts
dashboard/frontend/src/: app.css  app.html
dashboard/frontend/src/lib/: api.ts  stores.svelte.ts  types.ts
dashboard/frontend/src/lib/components/: DiffViewer.svelte  HyperparamDiff.svelte  InsightSidebar.svelte  RunGraph.svelte
dashboard/frontend/src/routes/: +layout.svelte  +page.svelte
dashboard/frontend/src/routes/history/: +page.svelte
dashboard/frontend/src/routes/tree/: +page.svelte
